scrollbar bug fix

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,10 +4,30 @@
 body {
   background-color: $background;
   min-height: 100vh;
+  overflow-y: scroll;
 }
 
 .container {
   max-width: 1278px;
   padding: 0 10px;
   margin: 0 auto;
+}
+
+body::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: grey;
+}
+
+body::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 10px;
 }
